<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_image"
    android:alpha="0.93">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity"
        android:id="@+id/componentLayout">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/marcellus"
                android:text="@string/welcom_header"
                android:textSize="28sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.5" />

            <Button
                android:id="@+id/next"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/next_page"
                android:onClick="showThanksAlert"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Button
                android:id="@+id/prev"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:background="@drawable/next_page"
                android:rotation="180"
                android:onClick="backToDetails"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

        </android.support.constraint.ConstraintLayout>

        <!--<LinearLayout-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:orientation="vertical"-->
            <!--app:layout_constraintTop_toBottomOf="@id/constraintLayout"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintBottom_toBottomOf="parent">-->

            <!--<android.support.constraint.ConstraintLayout-->
                <!--android:layout_marginStart="@dimen/welcome_layout_side_margin"-->
                <!--android:layout_marginEnd="@dimen/welcome_layout_side_margin"-->
                <!--android:layout_marginTop="@dimen/welcome_layout_vertical_margin"-->
                <!--android:layout_marginBottom="@dimen/welcome_layout_vertical_margin"-->
                <!--android:layout_width="100dp"-->
                <!--android:layout_height="100dp">-->

            <!--</android.support.constraint.ConstraintLayout>-->

        <!--</LinearLayout>-->

        <android.support.constraint.ConstraintLayout
            android:layout_width="900dp"
            android:layout_height="600dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/layout_round_corner"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_weight="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout"
            app:layout_constraintVertical_bias="0.0"
            app:layout_constraintVertical_weight="1">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="68dp"
                android:fontFamily="@font/marcellus"
                android:text="@string/welcome_header_text"
                android:textSize="48sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.501"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <Button
                android:id="@+id/bid"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:layout_marginEnd="120dp"
                android:fontFamily="@font/marcellus"
                android:text="@string/welcome_button_id"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <Button
                android:id="@+id/bphoto"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="120dp"
                android:layout_marginTop="60dp"
                android:fontFamily="@font/marcellus"
                android:text="@string/welcome_button_self"
                android:textSize="14sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <ImageView
                android:id="@+id/clickedPhoto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/bphoto"
                app:layout_constraintStart_toStartOf="@+id/bphoto"
                app:layout_constraintTop_toBottomOf="@+id/bphoto" />

            <ImageView
                android:id="@+id/clickedID"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/bid"
                app:layout_constraintStart_toStartOf="@+id/bid"
                app:layout_constraintTop_toBottomOf="@+id/bid" />

        </android.support.constraint.ConstraintLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>